# cuda_emicp_softassign

./: CMakeLists.txt  README.md
include/emicp/: emicp.h
src/: 3dregistration.h  add_rigid_transform.cpp  cloud2data.cpp  emicp.cu  emicp_cpu.cpp  findRTfromS.cpp  icp.cpp  main.cpp  softassign.cu  test_icp.cpp
